bloembraaden/_front/admin.css
/* ... */
body .PEATCMS_admin a:hover,
body .PEATCMS_admin a:focus,
body .PEATCMS_admin .peatcms-link:hover,
body .PEATCMS_admin .peatcms-link:focus {
    color: inherit;
    background-color: inherit;
    text-decoration: underline;
}

/* admin items that are only visible when hovering */
.PEATCMS_admin .onhover {
    display: none;
}

.PEATCMS_admin:hover .onhover {
    display: inline-block;
}

/**
 * The one admin button
 */
#admin_console_button {
    position: fixed;
    bottom: .5em;
    left: .5em;
    background-color: var(--admin-color-paper-see-through);
    color: var(--admin-color-key);
    padding: .25em;
    border-radius: 2em;
    border: solid 3px var(--admin-color-accent);
    z-index: 100;
    line-height: 0;
    text-align: center;
}

.PEATCMS_admin .hoverstate {
    background: transparent;
    box-shadow: none;
    cursor: pointer;
}

.PEATCMS_admin input[type=submit],
.PEATCMS_admin input[type=button],
.PEATCMS_admin .button,
.PEATCMS_admin button,
.PEATCMS_admin ::file-selector-button {
    /* reset a button */
    width: auto;
    height: auto;
    background-color: inherit;
    border-radius: 0;
    border: 0;
    color: var(--admin-color-accent);
    cursor: pointer;
    padding: .1rem .21rem;
    box-shadow: none;
    text-decoration: none;
}

.PEATCMS_admin .hoverstate:hover,
.PEATCMS_admin input[type=submit]:hover,
.PEATCMS_admin input[type=button]:hover,
.PEATCMS_admin .button:hover,
.PEATCMS_admin ::file-selector-button:hover,
.PEATCMS_admin input[type="checkbox"] + label:before:hover, /* pretty checkboxes */
.PEATCMS_admin button:hover {
    /*outline: solid 2px var(--admin-color-accent-fierce);
    outline-offset: -2px;*/
    color: var(--admin-color-accent-fierce);
}

#admin_console_button .hoverstate {
    outline-offset: 1px;
}

#admin_console_button label {
    cursor: pointer;
}

.peatcms_ctrl_key_tip {
    position: absolute;
    display: block;
    padding: 0 2px;
    background-color: var(--admin-color-accent-fierce);
    height: 1.5rem;
    line-height: 1.5rem;
    white-space: nowrap;
    z-index: 101;
}

#PEATCMS_edit_menu {
    cursor: pointer;
    position: fixed; /* because boundingRect = relative to view */
    background-color: var(--admin-color-paper-see-through);
    border: solid 3px var(--admin-color-accent);
    padding: 0 .25em;
    border-radius: 2em;
    margin: -1px 4px;
    color: var(--admin-color-accent);
}

/**
 * the various screens / consoles that can be activated by admin
 */
.PEATCMS_admin .console_screen {
    background-color: var(--admin-color-paper);
    position: fixed;
    bottom: 0;
    left: 0;
}

.PEATCMS_admin .console_screen .cell {
    display: table-cell;
    padding: .2em .5em;
    background-color: var(--admin-color-paper); /* to prevent overflow:hidden to be shown in the next .harmonica cell */
}

.PEATCMS_admin .console_screen .cell header {
    white-space: nowrap;
    background-color: inherit;
    width: inherit;
    border: 0 !important;
    height: auto; /* for when a client css has the header height defined */
}

.PEATCMS_admin .console_screen .cell:first-child {
    width: 162px;
}

.PEATCMS_admin .console_screen .cell:not(:first-child) {
    border-left: solid 1px var(--admin-color-accent-neutral);
}

.PEATCMS_admin .console_screen .cell.harmonica {
    transition: border-color .5s;
    width: 20px;
    max-width: 20px;
}

.PEATCMS_admin .console_screen .cell.harmonica.active {
    width: 260px;
    max-width: 260px;
    border-left-color: var(--admin-color-accent);
}

.PEATCMS_admin .console_screen .cell.active header *,
.PEATCMS_admin .console_screen .cell.active header {
    color: var(--admin-color-accent);
    height: auto;
}

.PEATCMS_admin .console_screen .cell .results {
    height: calc(var(--admin-console-height) - 70px);
    overflow-x: hidden;
    overflow-y: auto;
}

.PEATCMS_admin .console_screen .cell .results div {
    font-size: 85%;
    cursor: pointer;
    white-space: nowrap;
}

.PEATCMS_admin .console_screen .cell:not(.active) * {
    overflow: hidden !important;
}

.PEATCMS_admin .console_screen .cell:not(.active) header {
    cursor: pointer;
}

.PEATCMS_admin .console_screen button {
    margin-bottom: 0;
}

.PEATCMS_admin .console_screen .cell.messages div {
    font-size: 85%;
}

/* stuff that should not be displayed (eg the checkboxes) */
.PEATCMS_admin .nodisplay {
    display: none;
}

/**
 * default states (before opening, with the corresponding checkboxes unchecked
 */
#admin_console {
    height: 0;
    bottom: -3px; /* size of the border-top */
    width: 100%;
    z-index: 100;
    overflow: hidden;
}

#admin_console_positioner {
    height: 4px;
    overflow: hidden;
    width: 100%;
    background-color: var(--admin-color-accent);
    cursor: row-resize;
}

#admin_sidebar {
    position: fixed;
    width: 0;
    left: -4px;
    height: 100%;
    /*border-right: inset 3px var(--admin-color-accent);*/
    z-index: 100;
    float: left;
    display: inline-block;
    overflow: hidden;
}

#admin_sidebar_positioner {
    float: right;
    width: 4px;
    height: 100vh;
    background-color: var(--admin-color-accent);
    cursor: col-resize;
}

#admin_sidebar .edit-area {
    position: absolute;
    top: 0;
    height: calc(100vh - 4em);
    margin-right: 4px; /* the width of the positioner */
    padding: 2em 8px;
    overflow-y: auto;
    max-width: calc(100% - 16px);
}

.edit-area .button.delete,
.edit-area button.delete {
    margin: 2rem 0;
}

.edit-area span[id] { /* the edit checkboxes */
    display: block;
    margin-bottom: 6px;
}

.edit-area .button.delete,
.edit-area button.delete,
.PEATCMS_admin input[type="button"].delete {
    color: var(--admin-color-no);
    font-weight: bold;
    cursor: pointer;
}

.edit-area button.delete ~ span.button {
    display: block;
    cursor: pointer;
    margin: 0 0 4rem 0;
}
/* ... */

